--- a/hub.html
+++ b/hub.html
@@ -92,6 +92,11 @@
 
     <h1 class="welcome-title" style="margin-bottom: 3rem; opacity: 1;">Select Game</h1>
 
+    <div style="position: absolute; top: 20px; left: 20px; z-index: 100;">
+        <button id="adminBtn" style="background:none; border:none; font-size: 1.5rem; cursor: pointer; opacity: 0.7;"
+            title="Admin History">🔒</button>
+    </div>
+
     <div class="hub-container">
         <!-- OX Game -->
         <div class="game-card" onclick="window.location.href='ox.html'">
@@ -110,9 +115,85 @@
         </div>
     </div>
 
+    <!-- Admin Modal -->
+    <div id="adminModal" class="welcome-screen hidden" style="z-index: 9999;">
+        <div class="game-container" style="max-height: 80vh; overflow-y: auto; max-width: 600px;">
+            <h2 style="margin-bottom: 1rem; color: #f472b6;">🏆 Score History</h2>
+            <button id="closeAdminBtn" class="text-btn"
+                style="position: absolute; top: 1rem; right: 1rem; color: #ef4444; background:none; border:none; font-size:1.2rem; cursor:pointer;">✕</button>
+
+            <div style="margin-top: 1rem; text-align: left;">
+                <table style="width: 100%; border-collapse: collapse; color: #cbd5e1;">
+                    <thead>
+                        <tr style="border-bottom: 1px solid #475569;">
+                            <th style="padding: 10px; text-align: left;">Player</th>
+                            <th style="padding: 10px; text-align: left;">Score</th>
+                            <th style="padding: 10px; text-align: right;">Date & Time</th>
+                        </tr>
+                    </thead>
+                    <tbody id="scoreTableBody">
+                        <!-- JS fills this -->
+                    </tbody>
+                </table>
+                <p id="noScoresMsg" style="text-align: center; color: #64748b; margin-top: 2rem; display: none;">No
+                    records found.</p>
+            </div>
+        </div>
+    </div>
+
     <script>
         const name = localStorage.getItem('srinath_game_name') || 'Guest';
         document.getElementById('playerNameDisplay').innerText = name;
+
+        /* --- Admin Logic --- */
+        const adminBtn = document.getElementById('adminBtn');
+        const adminModal = document.getElementById('adminModal');
+        const closeAdminBtn = document.getElementById('closeAdminBtn');
+        const scoreTableBody = document.getElementById('scoreTableBody');
+        const noScoresMsg = document.getElementById('noScoresMsg');
+
+        adminBtn.addEventListener('click', () => {
+            const pass = prompt("Enter Admin Password:");
+            if (pass === '2007') {
+                openAdminPanel();
+            } else if (pass !== null) {
+                alert("Access Denied.");
+            }
+        });
+
+        closeAdminBtn.addEventListener('click', () => {
+            adminModal.classList.add('hidden');
+        });
+
+        function openAdminPanel() {
+            adminModal.classList.remove('hidden');
+            renderHistory();
+        }
+
+        function renderHistory() {
+            const history = JSON.parse(localStorage.getItem('srinath_game_history') || '[]');
+            scoreTableBody.innerHTML = '';
+
+            if (history.length === 0) {
+                noScoresMsg.style.display = 'block';
+                return;
+            }
+            noScoresMsg.style.display = 'none';
+
+            // Sort by Score Descending
+            history.sort((a, b) => b.score - a.score);
+
+            history.forEach(item => {
+                const tr = document.createElement('tr');
+                tr.style.borderBottom = '1px solid rgba(255,255,255,0.05)';
+                tr.innerHTML = `
+                    <td style="padding: 10px; color: ${item.score > 200 ? '#4ade80' : '#cbd5e1'}; font-weight: 500;">${item.name}</td>
+                    <td style="padding: 10px; font-weight: bold; color: #fff;">${item.score}</td>
+                    <td style="padding: 10px; text-align: right; font-size: 0.8rem; color: #94a3b8;">${item.date}</td>
+                `;
+                scoreTableBody.appendChild(tr);
+            });
+        }
     </script>
 </body>
 
