Fix Admin Search and Host Score Sync

--- a/hub.html
+++ b/hub.html
@@ -122,6 +122,12 @@
             <button id="closeAdminBtn" class="text-btn"
                 style="position: absolute; top: 1rem; right: 1rem; color: #ef4444; background:none; border:none; font-size:1.2rem; cursor:pointer;">✕</button>
 
+            <!-- Search Bar -->
+            <div style="margin-bottom: 1rem;">
+                <input type="text" id="adminSearch" placeholder="Search Player Name..."
+                    style="width: 100%; padding: 10px; background: rgba(255,255,255,0.1); border: 1px solid rgba(255,255,255,0.2); color: white; border-radius: 8px;">
+            </div>
+
             <div style="margin-top: 1rem; text-align: left;">
                 <table style="width: 100%; border-collapse: collapse; color: #cbd5e1;">
                     <thead>
